--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,7 +11,8 @@ WORKDIR /app
 
 COPY requirements.txt /app
 RUN python -m pip install --upgrade pip
-RUN pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host=files.pythonhosted.org --no-cache-dir -r requirements.txt
+RUN pip install Flask Werkzeug
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Run app.py when the container launches
 COPY app.py /app
